# AiM-Selenium-Scripts

./: .gitignore  .gitkeep  README.md  TODO.md  pyproject.toml
aim_automation/: .gitignore  README.md  README.rst  deactivate.py  import_assets.py  pyproject.toml  ready_stress_test.py  update_sope.py  update_tier.py
aim_automation/aim_automation/: deactivate.py  import_assets.py  update_sope.py
aim_automation/csv/: Asset_Importing_Template.csv  SOPE_Rate_Template.csv
aim_automation/tests/: test.py  test_aim_automation.py
